fix: import statement

--- a/src/TryEnsembling.ipynb
+++ b/src/TryEnsembling.ipynb
@@ -9,7 +9,7 @@
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
-    "import tensorflow.keras as keras\n",
+    "from tensorflow import keras\n",
     "\n",
     "from Ensemble import Ensemble, EnsembleMethods"
    ]
@@ -54,15 +54,15 @@
    "outputs": [],
    "source": [
     "model2 = keras.Sequential([\n",
-    "    tf.keras.layers.InputLayer(input_shape=(3,)),\n",
-    "    tf.keras.layers.Dense(3),\n",
-    "    tf.keras.layers.Dense(3)\n",
+    "    keras.layers.InputLayer(input_shape=(3,)),\n",
+    "    keras.layers.Dense(3),\n",
+    "    keras.layers.Dense(3)\n",
     "])\n",
     "\n",
     "model3 = keras.Sequential([\n",
-    "    tf.keras.layers.InputLayer(input_shape=(3,)),\n",
-    "    tf.keras.layers.Dense(5),\n",
-    "    tf.keras.layers.Dense(3)\n",
+    "    keras.layers.InputLayer(input_shape=(3,)),\n",
+    "    keras.layers.Dense(5),\n",
+    "    keras.layers.Dense(3)\n",
     "])"
    ],
    "metadata": {
