add datasets to gitignore

--- a/notebooks/tanya/test_abnormal_heartbeat_ds.ipynb
+++ b/notebooks/tanya/test_abnormal_heartbeat_ds.ipynb
@@ -16,6 +16,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
+    "import sys\n",
+    "sys.path.append(\"../../\")\n",
     "\n",
     "\n",
     "def plot_model_history(history, epochs, path=None):\n",
@@ -191,10 +193,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.path.append(\"../../\")"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -673,14 +672,19 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 103,
-   "outputs": [],
-   "source": [],
+   "cell_type": "markdown",
+   "source": [
+    "| |test_loss|\ttest_acc|\n",
+    "-----------|-----|-----------------|-----------------|\n",
+    "| FCN\t      |0.671740|\t0.721951|\n",
+    "| MLP\t      |1.067936|\t0.731707|\n",
+    "| MCDCNN\t   |0.667893|\t0.731707|\n",
+    "| Time_CNN\t |5.187996|\t0.721951|"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    }
   },
