add functions get_all_datasets_test_train_np_arrays and get_all_datasets_info

--- a/notebooks/analyze_datasets.ipynb
+++ b/notebooks/analyze_datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "import os\n",
@@ -10,7 +10,7 @@
     "from collections import defaultdict\n",
     "import sys\n",
     "sys.path.append(\"../\")\n",
-    "from src.LoadData import load_numpy_array_from_ts"
+    "from src.LoadData import load_numpy_array_from_ts, get_all_datasets_info, get_all_datasets_test_train_np_arrays"
    ],
    "metadata": {
     "collapsed": false,
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "path_to_datasets = \"../datasets\"\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -109,8 +109,20 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Use function get_all_datasets_info"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "columns = [\"ds_name\", \"length\",  \"train_size\", \"test_size\", \"train_classes_distr\", \"test_classes_distr\"]\n",
@@ -125,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def array_dist(arr):\n",
@@ -146,7 +158,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "datasets_test_path_train_path = get_all_datasets_info(path_to_datasets)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -178,16 +204,10 @@
     }
    ],
    "source": [
-    "for i in range(len(datasets_paths)):\n",
-    "    ds_path = datasets_paths[i]\n",
+    "for ds_name, (test_file, train_file) in datasets_test_path_train_path.items():\n",
     "    row = list()\n",
-    "    row.append(datasets_names[i])\n",
-    "    print(datasets_names[i])\n",
-    "    for file_name in os.listdir(ds_path):\n",
-    "        if \"TEST\" in file_name:\n",
-    "            test_file = os.path.join(ds_path, file_name)\n",
-    "        if \"TRAIN\" in file_name:\n",
-    "            train_file = os.path.join(ds_path, file_name)\n",
+    "    row.append(ds_name)\n",
+    "    print(ds_name)\n",
     "    print(test_file, train_file)\n",
     "    x_test, y_test = load_numpy_array_from_ts(test_file)\n",
     "    x_train, y_train = load_numpy_array_from_ts(train_file)\n",
@@ -207,13 +227,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
       "text/plain": "{1.0: 0.8921155094094744, -1.0: 0.10788449059052563}"
      },
-     "execution_count": 74,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "df = pd.DataFrame(data, columns=columns)"
@@ -244,14 +264,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
       "text/plain": "                       ds_name  length  train_size  test_size  \\\n0           abnormal_heartbeat   18530         204        205   \n1                   arrow_head     251          36        175   \n2                 coffee_beans     286          28         28   \n3                    cricket_y     300         390        390   \n4       distal_phalanx_outline      80         600        276   \n5             electric_devices      96        8926       7711   \n6                     freezers     301         150       2850   \n7   phalanges_outlines_correct      80        1800        858   \n8         share_price_increase      60         965        966   \n9                 swedish_leaf     128         500        625   \n10                       wafer     152        1000       6164   \n\n                                  train_classes_distr  \\\n0   {0.0: 0.7303921568627451, 1.0: 0.2696078431372...   \n1   {0.0: 0.3333333333333333, 1.0: 0.3333333333333...   \n2                                {0.0: 0.5, 1.0: 0.5}   \n3   {2.0: 0.08717948717948718, 4.0: 0.076923076923...   \n4                              {1.0: 0.63, 0.0: 0.37}   \n5   {1.0: 0.08144745686757786, 2.0: 0.249943983867...   \n6                                {1.0: 0.5, 2.0: 0.5}   \n7   {1.0: 0.6511111111111111, 0.0: 0.3488888888888...   \n8   {0.0: 0.6870466321243524, 1.0: 0.3129533678756...   \n9   {4.0: 0.072, 11.0: 0.07, 13.0: 0.066, 8.0: 0.0...   \n10                          {1.0: 0.903, -1.0: 0.097}   \n\n                                   test_classes_distr  \n0   {0.0: 0.7317073170731707, 1.0: 0.2682926829268...  \n1   {0.0: 0.3942857142857143, 1.0: 0.3028571428571...  \n2   {0.0: 0.5357142857142857, 1.0: 0.4642857142857...  \n3   {7.0: 0.08461538461538462, 9.0: 0.087179487179...  \n4   {1.0: 0.5833333333333334, 0.0: 0.4166666666666...  \n5   {6.0: 0.0963558552716898, 5.0: 0.2423810141356...  \n6                                {1.0: 0.5, 2.0: 0.5}  \n7   {1.0: 0.6130536130536131, 0.0: 0.3869463869463...  \n8   {0.0: 0.6863354037267081, 1.0: 0.3136645962732...  \n9   {10.0: 0.0784, 11.0: 0.064, 8.0: 0.0704, 12.0:...  \n10  {1.0: 0.8921155094094744, -1.0: 0.107884490590...  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ds_name</th>\n      <th>length</th>\n      <th>train_size</th>\n      <th>test_size</th>\n      <th>train_classes_distr</th>\n      <th>test_classes_distr</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>abnormal_heartbeat</td>\n      <td>18530</td>\n      <td>204</td>\n      <td>205</td>\n      <td>{0.0: 0.7303921568627451, 1.0: 0.2696078431372...</td>\n      <td>{0.0: 0.7317073170731707, 1.0: 0.2682926829268...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>arrow_head</td>\n      <td>251</td>\n      <td>36</td>\n      <td>175</td>\n      <td>{0.0: 0.3333333333333333, 1.0: 0.3333333333333...</td>\n      <td>{0.0: 0.3942857142857143, 1.0: 0.3028571428571...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>coffee_beans</td>\n      <td>286</td>\n      <td>28</td>\n      <td>28</td>\n      <td>{0.0: 0.5, 1.0: 0.5}</td>\n      <td>{0.0: 0.5357142857142857, 1.0: 0.4642857142857...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>cricket_y</td>\n      <td>300</td>\n      <td>390</td>\n      <td>390</td>\n      <td>{2.0: 0.08717948717948718, 4.0: 0.076923076923...</td>\n      <td>{7.0: 0.08461538461538462, 9.0: 0.087179487179...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>distal_phalanx_outline</td>\n      <td>80</td>\n      <td>600</td>\n      <td>276</td>\n      <td>{1.0: 0.63, 0.0: 0.37}</td>\n      <td>{1.0: 0.5833333333333334, 0.0: 0.4166666666666...</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>electric_devices</td>\n      <td>96</td>\n      <td>8926</td>\n      <td>7711</td>\n      <td>{1.0: 0.08144745686757786, 2.0: 0.249943983867...</td>\n      <td>{6.0: 0.0963558552716898, 5.0: 0.2423810141356...</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>freezers</td>\n      <td>301</td>\n      <td>150</td>\n      <td>2850</td>\n      <td>{1.0: 0.5, 2.0: 0.5}</td>\n      <td>{1.0: 0.5, 2.0: 0.5}</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>phalanges_outlines_correct</td>\n      <td>80</td>\n      <td>1800</td>\n      <td>858</td>\n      <td>{1.0: 0.6511111111111111, 0.0: 0.3488888888888...</td>\n      <td>{1.0: 0.6130536130536131, 0.0: 0.3869463869463...</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>share_price_increase</td>\n      <td>60</td>\n      <td>965</td>\n      <td>966</td>\n      <td>{0.0: 0.6870466321243524, 1.0: 0.3129533678756...</td>\n      <td>{0.0: 0.6863354037267081, 1.0: 0.3136645962732...</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>swedish_leaf</td>\n      <td>128</td>\n      <td>500</td>\n      <td>625</td>\n      <td>{4.0: 0.072, 11.0: 0.07, 13.0: 0.066, 8.0: 0.0...</td>\n      <td>{10.0: 0.0784, 11.0: 0.064, 8.0: 0.0704, 12.0:...</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>wafer</td>\n      <td>152</td>\n      <td>1000</td>\n      <td>6164</td>\n      <td>{1.0: 0.903, -1.0: 0.097}</td>\n      <td>{1.0: 0.8921155094094744, -1.0: 0.107884490590...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 76,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,10 +288,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "df.to_csv(\"./datasets_analysis.csv\", index=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Use function get_all_datasets_test_train_np_arrays"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [],
+   "source": [
+    "data = list()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [],
+   "source": [
+    "datasets_test_path_train_path = get_all_datasets_test_train_np_arrays(path_to_datasets)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abnormal_heartbeat\n",
+      "arrow_head\n",
+      "coffee_beans\n",
+      "cricket_y\n",
+      "distal_phalanx_outline\n",
+      "electric_devices\n",
+      "freezers\n",
+      "phalanges_outlines_correct\n",
+      "share_price_increase\n",
+      "swedish_leaf\n",
+      "wafer\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ds_name, ds_data in datasets_test_path_train_path.items():\n",
+    "    row = list()\n",
+    "    row.append(ds_name)\n",
+    "    print(ds_name)\n",
+    "    x_test, y_test = ds_data[\"test_data\"]\n",
+    "    x_train, y_train = ds_data[\"train_data\"]\n",
+    "    row.append(x_train.shape[1])\n",
+    "    row.append(x_train.shape[0])\n",
+    "    row.append(x_test.shape[0])\n",
+    "    row.append(str(array_dist(y_train)))\n",
+    "    row.append(str(array_dist(y_test)))\n",
+    "    data.append(row)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(data, columns=columns)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                       ds_name  length  train_size  test_size  \\\n0           abnormal_heartbeat   18530         204        205   \n1                   arrow_head     251          36        175   \n2                 coffee_beans     286          28         28   \n3                    cricket_y     300         390        390   \n4       distal_phalanx_outline      80         600        276   \n5             electric_devices      96        8926       7711   \n6                     freezers     301         150       2850   \n7   phalanges_outlines_correct      80        1800        858   \n8         share_price_increase      60         965        966   \n9                 swedish_leaf     128         500        625   \n10                       wafer     152        1000       6164   \n\n                                  train_classes_distr  \\\n0   {0.0: 0.7303921568627451, 1.0: 0.2696078431372...   \n1   {0.0: 0.3333333333333333, 1.0: 0.3333333333333...   \n2                                {0.0: 0.5, 1.0: 0.5}   \n3   {2.0: 0.08717948717948718, 4.0: 0.076923076923...   \n4                              {1.0: 0.63, 0.0: 0.37}   \n5   {1.0: 0.08144745686757786, 2.0: 0.249943983867...   \n6                                {1.0: 0.5, 2.0: 0.5}   \n7   {1.0: 0.6511111111111111, 0.0: 0.3488888888888...   \n8   {0.0: 0.6870466321243524, 1.0: 0.3129533678756...   \n9   {4.0: 0.072, 11.0: 0.07, 13.0: 0.066, 8.0: 0.0...   \n10                          {1.0: 0.903, -1.0: 0.097}   \n\n                                   test_classes_distr  \n0   {0.0: 0.7317073170731707, 1.0: 0.2682926829268...  \n1   {0.0: 0.3942857142857143, 1.0: 0.3028571428571...  \n2   {0.0: 0.5357142857142857, 1.0: 0.4642857142857...  \n3   {7.0: 0.08461538461538462, 9.0: 0.087179487179...  \n4   {1.0: 0.5833333333333334, 0.0: 0.4166666666666...  \n5   {6.0: 0.0963558552716898, 5.0: 0.2423810141356...  \n6                                {1.0: 0.5, 2.0: 0.5}  \n7   {1.0: 0.6130536130536131, 0.0: 0.3869463869463...  \n8   {0.0: 0.6863354037267081, 1.0: 0.3136645962732...  \n9   {10.0: 0.0784, 11.0: 0.064, 8.0: 0.0704, 12.0:...  \n10  {1.0: 0.8921155094094744, -1.0: 0.107884490590...  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ds_name</th>\n      <th>length</th>\n      <th>train_size</th>\n      <th>test_size</th>\n      <th>train_classes_distr</th>\n      <th>test_classes_distr</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>abnormal_heartbeat</td>\n      <td>18530</td>\n      <td>204</td>\n      <td>205</td>\n      <td>{0.0: 0.7303921568627451, 1.0: 0.2696078431372...</td>\n      <td>{0.0: 0.7317073170731707, 1.0: 0.2682926829268...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>arrow_head</td>\n      <td>251</td>\n      <td>36</td>\n      <td>175</td>\n      <td>{0.0: 0.3333333333333333, 1.0: 0.3333333333333...</td>\n      <td>{0.0: 0.3942857142857143, 1.0: 0.3028571428571...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>coffee_beans</td>\n      <td>286</td>\n      <td>28</td>\n      <td>28</td>\n      <td>{0.0: 0.5, 1.0: 0.5}</td>\n      <td>{0.0: 0.5357142857142857, 1.0: 0.4642857142857...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>cricket_y</td>\n      <td>300</td>\n      <td>390</td>\n      <td>390</td>\n      <td>{2.0: 0.08717948717948718, 4.0: 0.076923076923...</td>\n      <td>{7.0: 0.08461538461538462, 9.0: 0.087179487179...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>distal_phalanx_outline</td>\n      <td>80</td>\n      <td>600</td>\n      <td>276</td>\n      <td>{1.0: 0.63, 0.0: 0.37}</td>\n      <td>{1.0: 0.5833333333333334, 0.0: 0.4166666666666...</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>electric_devices</td>\n      <td>96</td>\n      <td>8926</td>\n      <td>7711</td>\n      <td>{1.0: 0.08144745686757786, 2.0: 0.249943983867...</td>\n      <td>{6.0: 0.0963558552716898, 5.0: 0.2423810141356...</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>freezers</td>\n      <td>301</td>\n      <td>150</td>\n      <td>2850</td>\n      <td>{1.0: 0.5, 2.0: 0.5}</td>\n      <td>{1.0: 0.5, 2.0: 0.5}</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>phalanges_outlines_correct</td>\n      <td>80</td>\n      <td>1800</td>\n      <td>858</td>\n      <td>{1.0: 0.6511111111111111, 0.0: 0.3488888888888...</td>\n      <td>{1.0: 0.6130536130536131, 0.0: 0.3869463869463...</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>share_price_increase</td>\n      <td>60</td>\n      <td>965</td>\n      <td>966</td>\n      <td>{0.0: 0.6870466321243524, 1.0: 0.3129533678756...</td>\n      <td>{0.0: 0.6863354037267081, 1.0: 0.3136645962732...</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>swedish_leaf</td>\n      <td>128</td>\n      <td>500</td>\n      <td>625</td>\n      <td>{4.0: 0.072, 11.0: 0.07, 13.0: 0.066, 8.0: 0.0...</td>\n      <td>{10.0: 0.0784, 11.0: 0.064, 8.0: 0.0704, 12.0:...</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>wafer</td>\n      <td>152</td>\n      <td>1000</td>\n      <td>6164</td>\n      <td>{1.0: 0.903, -1.0: 0.097}</td>\n      <td>{1.0: 0.8921155094094744, -1.0: 0.107884490590...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ],
    "metadata": {
     "collapsed": false,
