repair append to csv

--- a/notebooks/tanya/test_abnormal_heartbeat_ds.ipynb
+++ b/notebooks/tanya/test_abnormal_heartbeat_ds.ipynb
@@ -18,7 +18,7 @@
     "from matplotlib import pyplot as plt\n",
     "import sys\n",
     "sys.path.append(\"../../\")\n",
-    "\n",
+    "from src.Helpers import append_to_csv\n",
     "\n",
     "def plot_model_history(history, epochs, path=None):\n",
     "  loss = history.history['loss']\n",
@@ -53,6 +53,34 @@
     "      plt.savefig(os.path.join(path, 'train_and_valid_accuracy.png'))\n",
     "  plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "path_persist_results = \"./training_res.csv\"\n",
+    "columns = [\"dataset_name\", \"model_name\", \"test_loss\", \"test_acc\", \"confusion_matrix\", \"history\"]\n",
+    "append_to_csv(path_persist_results, columns)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
