--- a/notebooks/example_train_procedure.ipynb
+++ b/notebooks/example_train_procedure.ipynb
@@ -121,7 +121,7 @@
    "source": [
     "path_persist_results = \"./training_res.csv\"\n",
     "columns = [\"dataset_name\", \"model_name\", \"test_loss\", \"test_acc\", \"confusion_matrix\", \"history\"]\n",
-    "append_to_csv(path_persist_results, columns, columns)"
+    "append_to_csv(path_persist_results, columns)"
    ],
    "metadata": {
     "collapsed": false,
@@ -9351,7 +9351,7 @@
     "                  test_acc,\n",
     "                  None, # TODO: persist confusion matrix to further analysis\n",
     "                  json.dumps(history.history)]\n",
-    "            append_to_csv(path_persist_results, columns, row)"
+    "            append_to_csv(path_persist_results, row)"
    ],
    "metadata": {
     "collapsed": false,
