--- a/notebooks/example_train_procedure.ipynb
+++ b/notebooks/example_train_procedure.ipynb
@@ -10,6 +10,7 @@
    "source": [
     "import sys\n",
     "import json\n",
+    "from pathlib import Path\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -106,8 +107,12 @@
    "outputs": [],
    "source": [
     "path_persist_results = \"./training_res.csv\"\n",
-    "columns = [\"dataset_name\", \"model_name\", \"test_loss\", \"test_acc\", \"confusion_matrix\", \"history\"]\n",
-    "append_to_csv(path_persist_results, columns)"
+    "if not (csv_path := Path(path_persist_results)).exists():\n",
+    "    csv_path.touch()\n",
+    "if len(csv_path.read_text()) == 0:\n",
+    "    # Only write if the file is empty\n",
+    "    columns = [\"dataset_name\", \"model_name\", \"test_loss\", \"test_acc\", \"confusion_matrix\", \"history\"]\n",
+    "    append_to_csv(path_persist_results, columns)"
    ],
    "metadata": {
     "collapsed": false
@@ -136,7 +141,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "6d744b92606142718f3e8a14560581ec"
+       "model_id": "34fe2d5d5cc141e39e2fe2f222a08093"
       }
      },
      "metadata": {},
@@ -155,7 +160,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "23e326dee2d847beb3066f89770b42f4"
+       "model_id": "97a1c8cc74fc42ef97299fcdb6fe24d3"
       }
      },
      "metadata": {},
@@ -165,11 +170,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model name:  MLP\n",
-      "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
-      "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
-      "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
-      "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n"
+      "Model name:  MLP\n"
      ]
     },
     {
@@ -178,7 +179,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "ec8a8ce89651450db5afd5e7017c10c2"
+       "model_id": "e21480825b944d63bcca367b27d82cac"
       }
      },
      "metadata": {},
@@ -188,23 +189,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0', '/job:localhost/replica:0/task:0/device:GPU:0').\n",
-      "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0', '/job:localhost/replica:0/task:0/device:GPU:0').\n",
-      "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0', '/job:localhost/replica:0/task:0/device:GPU:0').\n",
-      "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0', '/job:localhost/replica:0/task:0/device:GPU:0').\n",
-      "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0', '/job:localhost/replica:0/task:0/device:GPU:0').\n",
-      "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0', '/job:localhost/replica:0/task:0/device:GPU:0').\n",
-      "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0', '/job:localhost/replica:0/task:0/device:GPU:0').\n",
-      "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0', '/job:localhost/replica:0/task:0/device:GPU:0').\n",
-      "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
-      "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
-      "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
-      "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
-      "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
-      "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0', '/job:localhost/replica:0/task:0/device:GPU:0').\n",
-      "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0', '/job:localhost/replica:0/task:0/device:GPU:0').\n",
-      "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
-      "7/7 [==============================] - 0s 5ms/step - loss: 0.7977 - accuracy: 0.7317\n",
+      "7/7 [==============================] - 0s 2ms/step - loss: 0.7858 - accuracy: 0.7317\n",
       "Model name:  MCDCNN\n"
      ]
     },
@@ -214,7 +199,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "060b4c7d7fa647dabf2e3fcc55209597"
+       "model_id": "886445c11c4342c3918663f1b9620950"
       }
      },
      "metadata": {},
@@ -222,32 +207,32 @@
     }
    ],
    "source": [
-    "with strategy.scope():\n",
-    "    for ds_name, ds_data in tqdm(datasets_test_train_data.items(), unit='dataset'):\n",
-    "        print(\"Dataset name: \", ds_name)\n",
-    "        x_test, y_test = ds_data[\"test_data\"]\n",
-    "        x_train, y_train = ds_data[\"train_data\"]\n",
+    "# with strategy.scope():\n",
+    "for ds_name, ds_data in tqdm(datasets_test_train_data.items(), unit='dataset'):\n",
+    "    print(\"Dataset name: \", ds_name)\n",
+    "    x_test, y_test = ds_data[\"test_data\"]\n",
+    "    x_train, y_train = ds_data[\"train_data\"]\n",
     "\n",
-    "        input_size = x_train.shape[1]\n",
-    "        output_size = len(np.unique(y_train))\n",
+    "    input_size = x_train.shape[1]\n",
+    "    output_size = len(np.unique(y_train))\n",
     "\n",
-    "        for get_model, model_name in tqdm(list(zip(models_getter, models_names)), unit='model', desc=f'Train on \"{ds_name}\"'):\n",
-    "            print(\"Model name: \", model_name)\n",
-    "            model = get_model(input_size, output_size)\n",
-    "            model.compile(optimizer='SGD',\n",
-    "                          loss='sparse_categorical_crossentropy',\n",
-    "                          metrics=['accuracy'])\n",
-    "            history = model.fit(x_train, y_train, batch_size=batch_size, epochs=epochs, validation_split=validation_split, callbacks=[TqdmCallback(verbose=0, desc=model_name)], verbose=0)\n",
-    "            test_loss, test_acc = model.evaluate(x_test, y_test)\n",
-    "            # TODO: add confusion matrix\n",
+    "    for get_model, model_name in tqdm(list(zip(models_getter, models_names)), unit='model', desc=f'Train on \"{ds_name}\"'):\n",
+    "        print(\"Model name: \", model_name)\n",
+    "        model = get_model(input_size, output_size)\n",
+    "        model.compile(optimizer='SGD',\n",
+    "                      loss='sparse_categorical_crossentropy',\n",
+    "                      metrics=['accuracy'])\n",
+    "        history = model.fit(x_train, y_train, batch_size=batch_size, epochs=epochs, validation_split=validation_split, callbacks=[TqdmCallback(verbose=0, desc=model_name)], verbose=0)\n",
+    "        test_loss, test_acc = model.evaluate(x_test, y_test)\n",
+    "        # TODO: add confusion matrix\n",
     "\n",
-    "            row = [ds_name,\n",
-    "                  model_name,\n",
-    "                  test_loss,\n",
-    "                  test_acc,\n",
-    "                  None, # TODO: persist confusion matrix to further analysis\n",
-    "                  json.dumps(history.history)]\n",
-    "            append_to_csv(path_persist_results, row)"
+    "        row = [ds_name,\n",
+    "              model_name,\n",
+    "              test_loss,\n",
+    "              test_acc,\n",
+    "              None, # TODO: persist confusion matrix to further analysis\n",
+    "              json.dumps(history.history)]\n",
+    "        append_to_csv(path_persist_results, row)"
    ],
    "metadata": {
     "collapsed": false,
