added get_Encoder() also added Tensorflow_addons and toolz as requirements

--- a/notebooks/example_train_procedure.ipynb
+++ b/notebooks/example_train_procedure.ipynb
@@ -19,7 +19,7 @@
     "from tqdm.keras import TqdmCallback\n",
     "sys.path.append(\"../\")\n",
     "from src.Evaluation import plot_model_history\n",
-    "from src.ModelBuilder import get_MLP, get_MCDCNN, get_Time_CNN, get_FCN\n",
+    "from src.ModelBuilder import get_MLP, get_MCDCNN, get_Time_CNN, get_FCN, get_Encoder\n",
     "from src.LoadData import get_all_datasets_test_train_np_arrays\n",
     "from src.Helpers import append_to_csv"
    ]
@@ -51,8 +51,8 @@
    "execution_count": 4,
    "outputs": [],
    "source": [
-    "models_getter = [get_MLP, get_MCDCNN, get_Time_CNN, get_FCN]\n",
-    "models_names = [\"MLP\", \"MCDCNN\", \"Time_CNN\", \"FCN\"]"
+    "models_getter = [get_MLP, get_MCDCNN, get_Time_CNN, get_FCN, get_Encoder]\n",
+    "models_names = [\"MLP\", \"MCDCNN\", \"Time_CNN\", \"FCN\", \"Encoder\"]"
    ],
    "metadata": {
     "collapsed": false
