added Resnet and tqdm dependency

--- a/notebooks/example_train_procedure.ipynb
+++ b/notebooks/example_train_procedure.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -19,14 +19,14 @@
     "from tqdm.keras import TqdmCallback\n",
     "sys.path.append(\"../\")\n",
     "from src.Evaluation import plot_model_history\n",
-    "from src.ModelBuilder import get_MLP, get_MCDCNN, get_Time_CNN, get_FCN, get_Encoder\n",
+    "from src.ModelBuilder import get_MLP, get_MCDCNN, get_Time_CNN, get_FCN, get_Encoder, get_Resnet\n",
     "from src.LoadData import get_all_datasets_test_train_np_arrays\n",
     "from src.Helpers import append_to_csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "path_to_datasets = \"../datasets\""
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "datasets_test_train_data = get_all_datasets_test_train_np_arrays(path_to_datasets)"
@@ -48,11 +48,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "outputs": [],
    "source": [
-    "models_getter = [get_MLP, get_MCDCNN, get_Time_CNN, get_FCN, get_Encoder]\n",
-    "models_names = [\"MLP\", \"MCDCNN\", \"Time_CNN\", \"FCN\", \"Encoder\"]"
+    "models_getter = [get_MLP, get_MCDCNN, get_Time_CNN, get_FCN, get_Encoder, get_Resnet]\n",
+    "models_names = [\"MLP\", \"MCDCNN\", \"Time_CNN\", \"FCN\", \"Encoder\", \"Resnet\"]"
    ],
    "metadata": {
     "collapsed": false
@@ -60,14 +60,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "WARNING:tensorflow:There are non-GPU devices in `tf.distribute.Strategy`, not using nccl allreduce.\n",
-      "INFO:tensorflow:Using MirroredStrategy with devices ('/job:localhost/replica:0/task:0/device:CPU:0', '/job:localhost/replica:0/task:0/device:GPU:0')\n"
+      "INFO:tensorflow:Using MirroredStrategy with devices ('/job:localhost/replica:0/task:0/device:CPU:0',)\n"
      ]
     }
    ],
@@ -83,13 +83,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
-      "text/plain": "[LogicalDevice(name='/device:CPU:0', device_type='CPU'),\n LogicalDevice(name='/device:GPU:0', device_type='GPU')]"
+      "text/plain": "[LogicalDevice(name='/device:CPU:0', device_type='CPU')]"
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "path_persist_results = \"./training_res.csv\"\n",
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "epochs = 30\n",
@@ -141,7 +141,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "34fe2d5d5cc141e39e2fe2f222a08093"
+       "model_id": "8a5a2489f91d44219fa878dd02cec9cd"
       }
      },
      "metadata": {},
@@ -156,11 +156,11 @@
     },
     {
      "data": {
-      "text/plain": "Train on \"abnormal_heartbeat\":   0%|          | 0/4 [00:00<?, ?model/s]",
+      "text/plain": "Train on \"abnormal_heartbeat\":   0%|          | 0/6 [00:00<?, ?model/s]",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "97a1c8cc74fc42ef97299fcdb6fe24d3"
+       "model_id": "efbd9e59a73b473394a5085853b0353e"
       }
      },
      "metadata": {},
@@ -170,36 +170,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model name:  MLP\n"
+      "Model name:  Resnet\n"
      ]
     },
     {
      "data": {
-      "text/plain": "MLP: 0epoch [00:00, ?epoch/s]",
+      "text/plain": "Resnet: 0epoch [00:00, ?epoch/s]",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "e21480825b944d63bcca367b27d82cac"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7/7 [==============================] - 0s 2ms/step - loss: 0.7858 - accuracy: 0.7317\n",
-      "Model name:  MCDCNN\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "MCDCNN: 0epoch [00:00, ?epoch/s]",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "886445c11c4342c3918663f1b9620950"
+       "model_id": "0ec0be2381d242d3889aa98877a0d873"
       }
      },
      "metadata": {},
@@ -235,10 +215,7 @@
     "        append_to_csv(path_persist_results, row)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
@@ -258,10 +235,7 @@
     "df_training_res = pd.read_csv(path_persist_results)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
@@ -272,10 +246,7 @@
     "df_training_res"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
@@ -286,10 +257,7 @@
     "history = df_training_res['history'][0]"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
@@ -298,10 +266,7 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
@@ -312,10 +277,7 @@
     "plot_model_history(json.loads(history), epochs=epochs)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
@@ -324,10 +286,7 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
@@ -336,10 +295,7 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
@@ -348,10 +304,7 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   }
  ],
