add notebooks for time-cnn

--- a/src/time-cnn/example_train_procedure.ipynb
+++ b/src/time-cnn/example_train_procedure.ipynb
@@ -53,8 +53,8 @@
    "execution_count": 4,
    "outputs": [],
    "source": [
-    "models_getter = [get_MCDCNN]\n",
-    "models_names = [\"MCDCNN\"]"
+    "models_getter = [get_Time_CNN()]\n",
+    "models_names = [\"Time-CNN\"]"
    ],
    "metadata": {
     "collapsed": false
