--- a/notebooks/example_train_procedure.ipynb
+++ b/notebooks/example_train_procedure.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -27,40 +30,55 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "path_to_datasets = \"../datasets\""
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "datasets_test_train_data = get_all_datasets_test_train_np_arrays(path_to_datasets)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "models_getter = [get_MLP, get_MCDCNN, get_Time_CNN, get_FCN, get_Encoder, get_Resnet]\n",
     "models_names = [\"MLP\", \"MCDCNN\", \"Time_CNN\", \"FCN\", \"Encoder\", \"Resnet\"]"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -76,18 +94,23 @@
     "# devices = tf.config.list_logical_devices('GPU') # Use this to run training just on GPUs\n",
     "devices = tf.config.list_logical_devices()\n",
     "strategy = tf.distribute.MirroredStrategy(devices)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "[LogicalDevice(name='/device:CPU:0', device_type='CPU')]"
+      "text/plain": [
+       "[LogicalDevice(name='/device:CPU:0', device_type='CPU')]"
+      ]
      },
      "execution_count": 12,
      "metadata": {},
@@ -96,14 +119,17 @@
    ],
    "source": [
     "devices"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "path_persist_results = \"./training_res.csv\"\n",
@@ -113,36 +139,44 @@
     "    # Only write if the file is empty\n",
     "    columns = [\"dataset_name\", \"model_name\", \"test_loss\", \"test_acc\", \"confusion_matrix\", \"history\"]\n",
     "    append_to_csv(path_persist_results, columns)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "epochs = 30\n",
     "batch_size = 10\n",
     "validation_split = 0.2"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "  0%|          | 0/11 [00:00<?, ?dataset/s]",
       "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8a5a2489f91d44219fa878dd02cec9cd",
        "version_major": 2,
-       "version_minor": 0,
-       "model_id": "8a5a2489f91d44219fa878dd02cec9cd"
-      }
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/11 [00:00<?, ?dataset/s]"
+      ]
      },
      "metadata": {},
      "output_type": "display_data"
@@ -156,12 +190,14 @@
     },
     {
      "data": {
-      "text/plain": "Train on \"abnormal_heartbeat\":   0%|          | 0/6 [00:00<?, ?model/s]",
       "application/vnd.jupyter.widget-view+json": {
+       "model_id": "efbd9e59a73b473394a5085853b0353e",
        "version_major": 2,
-       "version_minor": 0,
-       "model_id": "efbd9e59a73b473394a5085853b0353e"
-      }
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Train on \"abnormal_heartbeat\":   0%|          | 0/6 [00:00<?, ?model/s]"
+      ]
      },
      "metadata": {},
      "output_type": "display_data"
@@ -175,12 +211,14 @@
     },
     {
      "data": {
-      "text/plain": "Resnet: 0epoch [00:00, ?epoch/s]",
       "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0ec0be2381d242d3889aa98877a0d873",
        "version_major": 2,
-       "version_minor": 0,
-       "model_id": "0ec0be2381d242d3889aa98877a0d873"
-      }
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Resnet: 0epoch [00:00, ?epoch/s]"
+      ]
      },
      "metadata": {},
      "output_type": "display_data"
@@ -213,120 +251,139 @@
     "              None, # TODO: persist confusion matrix to further analysis\n",
     "              json.dumps(history.history)]\n",
     "        append_to_csv(path_persist_results, row)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Example load training results and display evaluation results"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "df_training_res = pd.read_csv(path_persist_results)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "df_training_res"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "history = df_training_res['history'][0]"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "plot_model_history(json.loads(history), epochs=epochs)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
-    "collapsed": false
-   }
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
-    "collapsed": false
-   }
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
-    "collapsed": false
-   }
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
